--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,11 @@ body {
 
 /* Navigation Styles */
 nav {
+    position: fixed; /* Make it fixed at the top */
+    top: 0; /* Align it to the top of the screen */
+    left: 0; /* Align it to the left edge */
+    width: 100%; /* Make it span the full width of the screen */
+    z-index: 1000; /* Ensure it stays on top of other content */
     background-color: black;
     padding: 15px;
     font-family: 'Montserrat', sans-serif; /* Use Montserrat for navigation */}
@@ -40,6 +45,7 @@ nav ul li a:hover {
 
 /* Header Styles */
 header h1 {
+    padding-top: 50px;
     font-family: 'Poppins', sans-serif; /* Use Poppins for header */    color: #1e5bbd;
     font-size: 36px;
     margin-top: 20px;
@@ -74,6 +80,36 @@ section h2 {
     margin-bottom: 20px; 
 }
 
+@keyframes marquee {
+    from {
+        transform: translateX(-10%);
+    }
+    to {
+        transform: translateX(-235%);
+    }
+}
+
+.marquee {
+    display: flex;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 100%;
+}
+
+.marquee-content {
+    display: flex;
+    min-width: 100%;
+    animation: marquee 12s linear infinite;
+}
+
+.marquee p {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 5vw; /* Responsive font size */
+    display: inline-block;
+    padding-right: 5vw; /* Responsive spacing between repeats */
+}
+
 /* Section Paragraph Styling */
 section p {
     font-family: 'Montserrat', sans-serif; /* Use Montserrat for paragraphs */
@@ -81,6 +117,41 @@ section p {
     width: 70%; 
     margin: 20px auto; 
     line-height: 1.8; 
+}
+
+.skills-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px; /* Adjust the gap between logos */
+    padding-bottom: 2rem;
+}
+
+.skill {
+    width: 80px; /* Size of each logo */
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.skill-logo {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+/* Hover effect */
+.skill:hover {
+    transform: scale(1.2); /* Scale up the logo */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); /* Add shadow on hover */
+}
+
+.skill:hover .skill-logo {
+    transform: rotate(15deg); /* Rotate logo on hover */
+    filter: brightness(1.2); /* Make the logo brighter */
 }
 
 /* Project Section Styling */
@@ -108,14 +179,18 @@ section p {
 
 /* Zoom Effect on Hover */
 .project img:hover {
-    transform: scale(1.5);
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5); 
+    transform: scale(1.1);
+    box-shadow: 0 4px 20px rgba(49, 142, 255, 0.5); 
 }
 
 .project h3 {
     font-family: 'Poppins', sans-serif; /* Use Poppins for project titles */    color: #1e5bbd; 
     font-size: 24px;
     margin-top: 20px;
+}
+
+.project h3 a{
+    color: #1e5bbd;
 }
 
 /* Footer Styling */
