--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ nav {
     width: 100%; /* Make it span the full width of the screen */
     z-index: 1000; /* Ensure it stays on top of other content */
     background-color: black;
-    padding: 15px;
+    padding: 0.8vw;
     font-family: 'Montserrat', sans-serif; /* Use Montserrat for navigation */}
 
 nav ul {
@@ -22,17 +22,21 @@ nav ul {
     padding: 0;
     display: flex;
     justify-content: center;
-    margin: 0;
+    margin-left: 10vw;
+    margin-right: 10vw;
+    margin-bottom: 0;
+    margin-top: 0;
+
 }
 
 nav ul li {
-    margin: 0 10px;
+    margin: 0 1vw;
 }
 
 nav ul li a {
     color: white;
     text-decoration: none;
-    font-size: 24px;
+    font-size: 2vw;
     font-weight: bold;
     letter-spacing: 2px;
     transition: color 0.3s ease; 
